@@ -197,6 +197,7 @@ dist_svcwebimages_DATA = \
 	www/images/openVZvm-noTxt.svg \
 	www/images/openVZvm.svg \
 	www/images/orbit_banner.png \
+	www/images/witest-logo-white.png \
 	www/images/pgfc-screenshot.jpg \
 	www/images/portal.png \
 	www/images/portal2.png \
