@@ -9,6 +9,7 @@
  * Fix bug report to print list of aggregates correctly. (#1198)
  * Use `email()` function to get user's address, not a `mail` attribute. (#1206)
  * Move included files to lib from portal (#1207)
+ * Include link to NYU Poly WITest wireless site. (#773)
 
 == 2.21.4 ==
  * Lowercase eppn before lookup in speaks-for flow (#1209)
